[package]
name = "wpslugify"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
edition = "2018"
license = "MPL-2.0+"
description = "Wordperfect compatible slugification functions"
homepage = "https://elfsternberg.com/pages/rustdoc/wpslugify/"
documentation = "https://elfsternberg.com/pages/rustdoc/wpslugify/"
repository = "https://github.com/elfsternberg/wpslugify"
keywords = ["appservers", "slug"]
readme = "./README.md"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"

[lib]
name = "wpslugify"
path = "src/lib.rs"
